--- a/AppiumDemo/test-output/old/Default suite/methods.html
+++ b/AppiumDemo/test-output/old/Default suite/methods.html
@@ -1,12 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="83da8e">  <td>24/02/16 13:19:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchTest.test1()[pri:0, instance:tests.SearchTest@72057ecf]">test1</td> 
-  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="83da8e">  <td>24/02/16 13:19:47</td>   <td>6831</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchTest.test2()[pri:0, instance:tests.SearchTest@72057ecf]">test2</td> 
-  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="a465be">  <td>24/02/16 13:19:59</td>   <td>19139</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:tests.SearchTest@72057ecf]">&lt;&lt;tearDown</td> 
+<tr bgcolor="ad8b8f">  <td>24/02/20 13:22:55</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:tests.SearchTest@62150f9e]">&gt;&gt;setup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="a465be">  <td>24/02/16 13:19:31</td>   <td>-8738</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:tests.SearchTest@72057ecf]">&gt;&gt;setup</td> 
+<tr bgcolor="ad8b8f">  <td>24/02/20 13:23:21</td>   <td>25593</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:tests.SearchTest@62150f9e]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="8e97bc">  <td>24/02/20 13:23:22</td>   <td>26609</td> <td title="&lt;&lt;ExentReportsDemo.teardownReport()[pri:0, instance:tests.SearchTest@62150f9e]">&lt;&lt;teardownReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="87b79e">  <td>24/02/20 13:23:03</td>   <td>7877</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchTest.test1()[pri:0, instance:tests.SearchTest@62150f9e]">test1</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="87b79e">  <td>24/02/20 13:23:11</td>   <td>15824</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchTest.test2()[pri:0, instance:tests.SearchTest@62150f9e]">test2</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="8e97bc">  <td>24/02/20 13:22:55</td>   <td>-226</td> <td title="&gt;&gt;ExentReportsDemo.setupReport()[pri:0, instance:tests.SearchTest@62150f9e]">&gt;&gt;setupReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
 </table>
